Bug 43937 - [4.6 regression] FAIL: gcc.dg/guality/inline-params.c
Summary: [4.6 regression] FAIL: gcc.dg/guality/inline-params.c
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: debug (show other bugs)
Version: 4.6.0
: P1 normal
Target Milestone: 4.6.0
Assignee: Eric Botcazou
URL: http://gcc.gnu.org/ml/gcc-patches/201...
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-29 13:13 UTC by H.J. Lu
Modified: 2010-09-13 21:10 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2010-04-30 17:31:41


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2010-04-29 13:13:45 UTC
On Linux/x86, revision 158843 gave:

FAIL: gcc.dg/guality/inline-params.c  -O1  execution test

Revision 158835 is OK
Comment 1 H.J. Lu 2010-04-29 13:20:23 UTC
Revision 158838:

http://gcc.gnu.org/ml/gcc-cvs/2010-04/msg00945.html

may be the cause.
Comment 2 Eric Botcazou 2010-04-30 17:31:41 UTC
Looking into it.
Comment 3 Eric Botcazou 2010-09-13 21:08:28 UTC
Subject: Bug 43937

Author: ebotcazou
Date: Mon Sep 13 21:08:13 2010
New Revision: 164258

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=164258
Log:
	PR debug/43937
	* varasm.c (output_constant_def_contents): Set TREE_ASM_WRITTEN on
	the DECL as well.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/varasm.c

Comment 4 Eric Botcazou 2010-09-13 21:10:05 UTC
At long last.