	PR debug/43937 	* varasm.c (output_constant_def_contents): Set TREE_ASM_WRITTEN on 	the DECL as well.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@164258 138bc75d-0d04-0410-961f-82ee72b054a4